--- a/menu.html
+++ b/menu.html
@@ -59,7 +59,7 @@
 <body>
     <header>
         <div> 
-            <img src="/images/logo.jpg" alt="Coffee Shop Logo" style="height: 50px;">
+            <img src="images/logo.jpg" alt="Coffee Shop Logo" style="height: 50px;">
         </div>
         <nav>
             <a href="index.html">About</a>
@@ -113,7 +113,7 @@
     </div>
 
     <footer>
-        @2024 Bryan's | <a href="privacy.html" style="color: white;">Privacy Policy</a>
+        @2024 Bryan's | <a href="privacy.html" style="color: white;" target="_blank">Privacy Policy</a>
     </footer>
 
     <script>
