--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/images/logo.jpg" alt="Bryan's Café Logo">
+            <img src="images/logo.jpg" alt="Bryan's Café Logo">
         </div>
         <nav>
             <ul>
@@ -33,12 +33,12 @@
                 <p>Whether you’re here to catch up with friends, work remotely, or simply take a break from the hustle and bustle, Bryan’s Café is a place where you’re always welcome.</p>
             </div>
             <div class="about-image">
-                <img src="/images/about.jpg" alt="Café Interior">
+                <img src="images/about.jpg" alt="Café Interior">
             </div>
         </section>
         <section class="our-story">
             <div class="story-image">
-                <img src="/images/history.jpg" alt="Coffee Story">
+                <img src="images/history.jpg" alt="Coffee Story">
             </div>
             <div class="story-text">
                 <h2>Our Story</h2>
@@ -48,7 +48,7 @@
             </div>
         </section>
         <footer>
-            <p>©2024 Bryan’s | <a href="privacy.html">Privacy Policy</p>
+            <p>©2024 Bryan’s | <a href="privacy.html" target="_blank">Privacy Policy</p>
         </footer>
     </main>
 </body>
