--- a/privacy.html
+++ b/privacy.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/images/logo.jpg" alt="Bryan's Café Logo">
+            <img src="images/logo.jpg" alt="Bryan's Café Logo">
         </div>
         <nav>
             <a href="index.html">About</a>
@@ -80,7 +80,7 @@
             </p>
         </section>
         <footer>
-            <p>©2024 Bryan’s | <a href="privacy.html">Privacy Policy</a></p>
+            <p>©2024 Bryan’s | <a href="privacy.html" target="_blank">Privacy Policy</a></p>
         </footer>
     </main>
 </body>
